<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_recent"
        android:enabled="true"
        android:icon="@drawable/ic_recent"
        android:title="@string/Recent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_top_rated"
        android:enabled="true"
        android:icon="@drawable/ic_top_rated"
        android:title="@string/TopRated"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_popular"
        android:enabled="true"
        android:icon="@drawable/ic_popular_now"
        android:title="@string/Popular"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_youtube_gaming"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
</menu>